--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "lodash": "^4.17.21",
     "pinia": "^2.2.1",
     "vue": "^3.4.29",
     "vue-material-design-icons": "^5.3.0",
