--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "axios": "^1.7.3",
+    "bootstrap": "^5.3.3",
     "lodash": "^4.17.21",
     "pinia": "^2.2.1",
     "vue": "^3.4.29",
