--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "favicons": "^7.2.0",
     "lodash": "^4.17.21",
+    "mdb-vue-ui-kit": "^5.0.0",
     "pinia": "^2.2.1",
     "vue": "^3.4.29",
     "vue-material-design-icons": "^5.3.0",
