--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "favicons": "^7.2.0",
+    "json-server": "^1.0.0-beta.2",
     "lodash": "^4.17.21",
     "mdb-vue-ui-kit": "^5.0.0",
     "pinia": "^2.2.1",
