--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@mdi/font": "^7.4.47",
     "@mdi/js": "^7.4.47",
     "@vitejs/plugin-vue": "^5.0.5",
+    "autoprefixer": "^10.4.20",
     "material-design-icons-iconfont": "^6.7.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
